[package]
name = "rukherson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.82.1"
anyhow = "1.0.71"


#[dependencies]
#nokhwa = "0.9.4"



[dependencies.nokhwa]
# TODO: replace the "*" with the latest version of `nokhwa`
version = "0.9.4"
# TODO: add some features
features = ["input-avfoundation"]

